--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "1.0.0",
     "description": "",
     "main": "script.js",
+    "type": "module",
     "scripts": {
         "start": "node script.js"
     },
@@ -10,7 +11,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "@vercel/kv": "^3.0.0",
+        "@upstash/redis": "^1.34.9",
         "cors": "^2.8.5",
         "crypto-js": "^4.2.0",
         "express": "^4.18.2"
