--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
         "cors": "^2.8.5",
         "crypto-js": "^4.2.0",
         "express": "^4.18.2"
+    },
+    "devDependencies": {
+        "@types/crypto-js": "^4.2.2"
     }
 }
