--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "license": "ISC",
     "dependencies": {
         "@upstash/redis": "^1.34.9",
+        "@vercel/analytics": "^1.5.0",
         "cors": "^2.8.5",
         "express": "^4.18.2",
         "ioredis": "^5.6.1"
